--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,15 @@
 * {
-    font-family: "Poppins", sans-serif;
+    color: #052AA0;
 }
 
 p {
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 1.6rem;
+}
+
+h1 {
+    font-family: 'Comic Sans MS';
+    font-weight: bold;
 }
 
 .center-x {
@@ -14,6 +20,10 @@ p {
 .center-y {
     display: flex;
     align-items: center;
+}
+
+.bold {
+    font-weight: bold;
 }
 
 header {
@@ -99,7 +109,7 @@ header img {
 }
 
 .image-container {
-    max-width: 700px;
+    max-width: 600px;
     overflow: hidden;
     text-align: center;
     border-radius: 0 40px;
@@ -107,7 +117,7 @@ header img {
 
 .image-container img {
     height: 700px;
-    transform: translate3d(-200px, 0px, 0px);
+    transform: translate3d(-160px, 0px, 0px);
 }
 
 .text-container {
@@ -116,7 +126,39 @@ header img {
     border-radius: 10px;
 }
 
-@media (max-width: 800px) {
+.criticism {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: white;
+    text-align: center;
+    gap: 40px;
+    border-radius: 10px;
+}
+
+.criticism-container {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+}
+
+.criticism-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 300px;
+}
+
+.criticism-item img {
+    width: 100px;
+    border-radius: 50%;
+    border: 2px solid black;
+}
+
+@media (max-width: 1000px) {
+    .home-content {
+        flex-direction: column;
+    }
     .home-content h1 {
         font-size: 80px;
         text-align: center;
@@ -131,4 +173,39 @@ header img {
     .flex-top-item {
         margin-bottom: 20px;
     }
+    .criticism-container {
+        flex-direction: column;
+    }
+    .wrapper {
+        width: 90%;
+    }
+    .image-container img {
+        transform: translate3d(-180px, 0px, 0px);
+    }
+}
+
+@media (max-width: 800px) {
+    .image-container {
+        max-width: 500px;
+    }
+    .image-container img {
+        transform: translate3d(-220px, 0px, 0px);
+    }
+}
+
+@media (max-width: 600px) {
+    .home-content h1 {
+        font-size: 60px;
+        text-align: center;
+    }
+    .image-container {
+        max-width: 300px;
+    }
+    .image-container img {
+        transform: translate3d(-250px, 0px, 0px);
+    }
+}
+
+@media (max-width: 400px) {
+    
 }
