--- a/style/style.css
+++ b/style/style.css
@@ -41,11 +41,10 @@ header img {
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url("../images/hartjes2.png");
     background-size: initial;
     background-repeat: repeat;
     width: 100%;
-    opacity: 0.7;
+    opacity: 0.5;
     min-height: 492px;
     z-index: -1;
 }
@@ -89,6 +88,7 @@ header img {
     min-height: 2000px;
     display: flex;
     justify-content: center;
+    padding-bottom: 70px;
 }
 
 .wrapper {
@@ -134,6 +134,7 @@ header img {
     text-align: center;
     gap: 40px;
     border-radius: 10px;
+    margin-bottom: 40px;
 }
 
 .criticism-container {
@@ -155,6 +156,64 @@ header img {
     border: 2px solid black;
 }
 
+.mock-form {
+    background-color: white;
+    border-radius: 10px;
+}
+
+.mock-form-container {
+    display: flex;
+    flex-direction: row;
+    padding: 40px;
+}
+
+.mock-form-item {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.mock-form-item input, .mock-form-input textarea {
+    padding: 10px;
+    width: 100%;
+}
+
+.mock-form-input {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+  
+.dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.4s ease;
+}
+
+.active {
+    background-color: #717171;
+}
+
+.slideshow {
+    transform: scale(0.8);
+}
+  
+.slide {
+    opacity: 1;
+}
+
+footer {
+    padding: 30px;
+    text-align: center;
+}
+
+footer img {
+    width: 100px;
+}
 @media (max-width: 1000px) {
     .home-content {
         flex-direction: column;
@@ -181,6 +240,9 @@ header img {
     }
     .image-container img {
         transform: translate3d(-180px, 0px, 0px);
+    }
+    .mock-form-container {
+        flex-direction: column;
     }
 }
 
